place raw material order working

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
-    <div class="footer-copyright text-center bg-dark font sticky-bottom">© 2019 Copyright:
+    <div class="footer-copyright text-center bg-dark font fixed-bottom">© 2019 Copyright:
         <a href="#">Drink and Delight</a>
     </div>
 </footer>
