Place Product Order completed

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -37,6 +37,7 @@
                 <a class="dropdown-item" routerLink ="update-rawmaterial-stock">Update Stock</a>
                 <a class="dropdown-item" routerLink ="set-process-date">Set Process date</a>
                 <a class="dropdown-item" routerLink ="track-rawmaterial-order">Track Raw material Order</a>
+                <a class="dropdown-item" routerLink ="display-supplier">Display Supplier Details</a>
             </div>
             </div>
           </li>
@@ -54,6 +55,7 @@
                 <a class="dropdown-item" routerLink ="update-product-stock">Update Stock</a>
                 <a class="dropdown-item" routerLink ="set-exit-date">Set Exit date</a>
                 <a class="dropdown-item" routerLink ="track-product-order">Track Product order</a>
+                <a class="dropdown-item" routerLink ="display-distributor">Display Distributor Details</a>
                 <a class="dropdown-item" routerLink ="add-distributor-address">Add Distributor address</a>
             </div>
             </div>
