--- a/src/app/products/track-product-order/track-product-order.component.html
+++ b/src/app/products/track-product-order/track-product-order.component.html
@@ -22,11 +22,19 @@
             </div>
         </div>
         <br>
-        <button type="submit" class="btn btn-primary" (click) = 'getMessage()'>Track Order</button>
+        <button type="submit" class="btn btn-primary" (click) = 'getMessage()' [disabled] = "!enableButton">Track Order</button>
     </form>
 </div>
 
-<div *ngIf = 'isTrackFetched'>
+<!-- <div *ngIf = 'isTrackFetched'>
    <p> Data fetched from servlet is: {{ message }}</p> 
+</div> -->
+
+<br>
+<div class="container">
+<div class="alert alert-info" *ngIf = 'isTrackFetched'>
+    <strong>{{ message }}</strong>
+  </div>
 </div>
+
 
