--- a/src/app/products/update-product-stock/update-product-stock.component.html
+++ b/src/app/products/update-product-stock/update-product-stock.component.html
@@ -49,7 +49,7 @@
                       </div>
           
                       <div class="col-lg-3">
-                          <input required type="date"  class='form-control' id="expirydate" #updateExpiryDate='ngModel'
+                          <input required type="date"  class='form-control'  id="expirydate" #updateExpiryDate='ngModel'
                           [(ngModel)]='expiryDate' name='expiryDate' (change) = "log(updateExpiryDate)">
                                    
                               <!-- <div class = "alert alert-danger" *ngIf = 'orderIDcheck'>Enter numeric order id</div> -->
@@ -66,7 +66,7 @@
                           <label for="QAStatus">Quality Status</label>
                       </div>
                       <div class="col-lg-3">
-                          <select class="form-control" name="QAStatus" required [(ngModel)] = 'qaStatus'>
+                          <select class="form-control" #qualityStatus = 'ngModel' name="QAStatus" required [(ngModel)] = 'qaStatus'  (change) = "log(qualityStatus)"> 
                           <option>Passed</option>
                           <option>Failed</option>
                           </select>
@@ -76,10 +76,22 @@
       </div>
   
       <br>      
-      <button type="submit" class="btn btn-primary">Update Stock</button>
+      <button type="submit" class="btn btn-primary" [disabled] = "!enableButton" (click)='setProductStock()'>Update Stock</button>
   
     </form>
   
+  </div>
+
+  <br>
+  <div class="container">
+  <div class="alert" 
+  [ngClass]="{
+      'alert-success': message === 'Data inserted',
+      'alert-danger': !(message === 'Data inserted')
+    }"
+  *ngIf = 'isDataSet'>
+      <strong>{{ message }}</strong>
+    </div>
   </div>
 
  
