--- a/src/app/rawmaterials/set-process-date/set-process-date.component.html
+++ b/src/app/rawmaterials/set-process-date/set-process-date.component.html
@@ -41,7 +41,7 @@
                 
             </div>
     <br>
-            <button type="submit" class="btn btn-primary">Update</button>
+            <button type="submit" class="btn btn-primary" [disabled] = "!enableButton" (click)='setProcessDate()'>Update</button>
     
     
     
@@ -49,3 +49,15 @@
     </form>
     
     </div>
+
+    <br>
+<div class="container">
+<div class="alert" 
+[ngClass]="{
+    'alert-success': message === 'Data inserted',
+    'alert-danger': !(message === 'Data inserted')
+  }"
+*ngIf = 'isDataSet'>
+    <strong>{{ message }}</strong>
+  </div>
+</div>
