--- a/src/app/rawmaterials/display-rawmaterial-orders/display-rawmaterial-orders.component.html
+++ b/src/app/rawmaterials/display-rawmaterial-orders/display-rawmaterial-orders.component.html
@@ -8,7 +8,8 @@
                                 <label for="DeliveryStatus">
                                         <p><b>Choose delivery status</b> </p>
                                 </label>
-                                <select class="form-control" name="DeliveryStatus" [(ngModel)] = "DeliveryStatusVar" required>
+                                <select class="form-control" name="DeliveryStatus" [(ngModel)]="DeliveryStatusVar"
+                                        required>
                                         <option value="ALL">ALL</option>
                                         <option value="Received">Received</option>
                                         <option value="Dispatched">Dispatched</option>
@@ -18,7 +19,7 @@
                                 <label for="SupplierID">
                                         <p><b>Choose Supplier</b> </p>
                                 </label>
-                                <select class="form-control" name="SupplierID" [(ngModel)] = "SupplierIDVar" required>
+                                <select class="form-control" name="SupplierID" [(ngModel)]="SupplierIDVar" required>
                                         <option value="ALL">ALL</option>
                                         <option value="SUP1">SUP1</option>
                                         <option value="SUP2">SUP2</option>
@@ -28,13 +29,17 @@
                                 </select>
                         </div>
                         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-                        <div class="col-lg-2"><br><br><br><input type="checkbox" (click)="changestatus(); SetMaxDate()" > Show
+                        <div class="col-lg-2"><br><br><br><input type="checkbox" (click)="changestatus(); SetMaxDate()">
+                                Show
                                 Calendar<br></div>
 
                         <div *ngIf="!(showdate); then thenBlock else elseBlock"></div>
                         <ng-template #thenBlock>
-                                <div class="col-lg-4"> Enter start date: <br> <input [max]="todayFormat" type="date" name="date1" id="date1" [(ngModel)] = "date1Var"  ><br><br> Enter end date : <br>
-                                        <input [max]="todayFormat" type="date" name="date1" id="date2" [(ngModel)] = "date2Var"><br><br> </div>
+                                <div class="col-lg-4"> Enter start date: <br> <input [max]="todayFormat" type="date"
+                                                name="date1" id="date1" [(ngModel)]="date1Var"><br><br> Enter end date :
+                                        <br>
+                                        <input [max]="todayFormat" type="date" name="date1" id="date2"
+                                                [(ngModel)]="date2Var"><br><br> </div>
 
                         </ng-template>
                         <ng-template #elseBlock>
@@ -45,9 +50,58 @@
                 <div class="container"><br><br><br><br>
                         <div style="width:500px;" align="right">
 
-                                <input  type="submit" value="submit"><br>
-                                <p> </p>
+                                <input type="submit" value="submit" (click)="getRawMaterial()"><br></div>
+                </div> 
+                
+                <div *ngIf="isDataFetched">
+                        
+                                <div class="table-responsive">
+
+                                                <table class="table table-striped table-bordered table-fixed table-hover table-condensed" style="border:0px; " id="myTable3">
+                                                  <thead>
+                                                    <tr>
+                                                <th><div class="col-lg-0.5">OrderId</div></th>
+                                                <th><div class="col-lg-1">Name</div></th>
+                                                <th><div class="col-lg-0.25">RawMaterial<br>Id</div></th>
+                                                <th><div class="col-lg-0.5">SupplierId</div></th>
+                                                <th><div class="col-lg-0.5">Quantity</div></th>
+                                                <th><div class="col-lg-0.5">QuantityUnit</div></th>
+                                                <th><div class="col-lg-1">Order<br>Date</div></th>
+                                                <th><div class="col-lg-0.5">Delivery<br>Date</div></th>
+                                                <th><div class="col-lg-0.5">Unit<br>Price</div></th>
+                                                <th><div class="col-lg-0.5">TotalPrice</div></th>
+                                                <th><div class="col-lg-0.5">DeliveryStatus</div></th>
+                                                
+                                        </tr>
+                                </thead>
+                                </table>
+                                <div *ngFor="let rmo of rmos" class="table-responsive" class ="table-responsive{-sm|-md|-lg|-xl}">
+                                                <table class="table table-striped table-bordered table-fixed table-hover table-condensed" style="border:0px; " id="myTable3">
+                                                                <tbody>
+                                                                  <tr>
+                                                        <td><div class="col-lg-1">{{rmo.orderId}}</div></td>
+                                                        <td align="left"><div class="col-lg-0.5">{{rmo.name}}</div></td>
+                                                        <td><div class="col-lg-1">{{rmo.rmId}}</div></td>
+                                                        <td><div class="col-lg-0.5">{{rmo.supplierId}}</div></td>
+                                                        <td><div class="col-lg-1">{{rmo.quantityValue}}</div></td>
+                                                        <td align="left"><div class="col-lg-1">{{rmo.quantityUnit}}</div></td>
+                                                        <td align="left"><div class="col-lg-0.5">{{rmo.dateOfOrder | date :'yyyy-MM-dd' }}</div></td>
+                                                        <td><div class="col-lg-0.5">{{rmo.dateOfDelivery | date :'yyyy-MM-dd'}}</div></td>
+                                                        <td><div class="col-lg-1">{{rmo.pricePerUnit}}</div></td>
+                                                        <td><div class="col-lg-1">{{rmo.totalPrice}}</div></td>
+                                                        <td><div class="col-lg-1">{{rmo.deliveryStatus}}</div></td>
+                                                       
+                                                </tr>
+
+                                        </tbody>
+                                </table>
+                                </div>
+
+
+
+
+                        </div>
 
                 </div>
-        </div>
-        
+                </div>
+</form>
