--- a/src/app/products/update-product-order/update-product-order.component.html
+++ b/src/app/products/update-product-order/update-product-order.component.html
@@ -1,20 +1,24 @@
+<br>
 <h3>Update Product Order</h3>
     <div class="container wrapper" class="form-check" class="was-validated">
 <hr>    
     <div class="row">
-            <div class="col-sm-3">
+            <div class="col-sm-2">
                 <label for="OrderId"><b>Order ID</b></label>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-3">
             <input required pattern='[1-9]+' type="text" #updateorderID='ngModel' class='form-control' [(ngModel)]='orderId' name='orderID' id="orderID" (change) = "log(trackorderID)">
             <div class="alert alert-danger" *ngIf="updateorderID.touched && !updateorderID.valid"> Order ID is required
+                <div *ngIf="updateorderID.errors.pattern"> Enter numeric order ID</div>
+            </div>
         </div>
+    </div>
 <br>        
     <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-2">
                 <label for="DeliveryStatus"><b>Delivery Status</b></label>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-3">
                 <select class="form-control" name="DeliveryStatus" id='DeliveryStatus' [(ngModel)]='DeliveryStatusVar' required>
                 <option *ngFor="let DeliveryStatus of DeliveryStatuses" >{{ DeliveryStatus }} </option>
                 </select>
@@ -24,6 +28,9 @@
     <button type="submit"class="btn btn-primary" (click) = 'getMessage()'>Update Order</button>
 </div>
 
-<div *ngIf = 'isUpdateProductOrderFetched' id  ='resultMessage'>
-   <p> Data fetched from servlet is: {{ message }}</p> 
-</div>
+<div class="container">
+    <div class="alert alert-info" *ngIf = 'isUpdateProductOrderFetched'>
+        <strong>{{ message }}</strong>
+        <br>
+      </div>
+    </div>
