--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,9 @@
 <!Doctype html>
 <head></head>
 <body> 
-
+<app-login></app-login>
 <app-header></app-header>
 <router-outlet></router-outlet>
 <br>
 <app-footer></app-footer>
-
 </body>
