--- a/src/app/authentication/username-existence/username-existence.component.html
+++ b/src/app/authentication/username-existence/username-existence.component.html
@@ -19,29 +19,13 @@
 							<input type="text" name="username" placeholder="username" [(ngModel)]="usernameVar" id="username" required />
 						</div>
 						
-						<div class="input-group mb-2">
-							<div class="input-group-append">
-
-							</div>
-							<input type="password" name="password" placeholder="password" [(ngModel)]="passwordVar" id="password" required />
-						</div>
 					</div>
-					<button type="submit" (click)="getMessage()">Login</button>
+					<button type="submit" (click)="getMessage()">Submit</button>
 					</form> 
 				</div>
 				<div class="d-flex justify-content-center mt-3 login_container">
-
-
 				</div>
-				<div class="mt-4">
-					<div class="d-flex justify-content-center links">
-						Don't have an account? <a href="registrationPage.html" class="ml-2">Sign Up</a>
-					</div>
-					<div class="d-flex justify-content-center links">
-						<a href="ForgotPassword.html">Forgot your password?</a>
-					</div>
-
-				</div>
+				
 			</div>
 		</div>
 	</div>
