--- a/src/app/products/place-product-order/place-product-order.component.html
+++ b/src/app/products/place-product-order/place-product-order.component.html
@@ -11,7 +11,7 @@
                     <b>Product Name</b>
                 </label>
                 <select class="form-control" name="ProductName" [(ngModel)]='ProductNameVar' required>
-                    <option *ngFor="let productOrder of productOrders">{{ productOrder }}</option>
+                    <option *ngFor="let productOrder of productDetails[0]">{{ productOrder }}</option>
                 </select>
             </div>
 
@@ -20,7 +20,7 @@
                     <b>Distributor ID</b>
                 </label>
                 <select class="form-control" name="DISTID" [(ngModel)]='DISTIDVar' required>
-                    <option *ngFor="let distributorId of distributorIds">{{ distributorId }}</option>
+                    <option *ngFor="let distributorId of productDetails[1]">{{ distributorId }}</option>
                 </select>
             </div>
 
@@ -29,7 +29,7 @@
                     <b>Warehouse ID</b>
                 </label>
                 <select class="form-control" name="warehouseId" [(ngModel)]='warehouseIdVar' required>
-                    <option *ngFor="let warehouseId of warehouseIds">{{ warehouseId }}</option>
+                    <option *ngFor="let warehouseId of productDetails[2]">{{ warehouseId }}</option>
                 </select>
             </div>
 
@@ -42,7 +42,7 @@
                 </label>
                 <br>
                 <input required pattern='[0-9]+' type="text" #quantity='ngModel' class='form-control' id="quantity" 
-                [(ngModel)]='quantityVar' name='quantity' (change)="log(quantity)">
+                [(ngModel)]='quantityVar' name='quantity'>
                 <div class="alert alert-danger" *ngIf="quantity.touched && !quantity.valid"> This field is required
                     <div *ngIf="quantity.errors.pattern"> Enter value in decimal only </div>
                 </div>
@@ -64,7 +64,7 @@
                 </label>
                 <br>
                 <input required pattern='[0-9]+' type="text" #pricePerUnit='ngModel' class='form-control' id="pricePerUnit" 
-                [(ngModel)]='pricePerUnitVar' name='pricePerUnit' (change)="log(pricePerUnit)">
+                [(ngModel)]='pricePerUnitVar' name='pricePerUnit'>
                 <div class="alert alert-danger" *ngIf="pricePerUnit.touched && !pricePerUnit.valid"> This field is required
                     <div *ngIf="pricePerUnit.errors.pattern"> Enter value in decimal only </div>
                 </div>
