Login part functional

--- a/src/app/authentication/change-password/change-password.component.html
+++ b/src/app/authentication/change-password/change-password.component.html
@@ -1,1 +1,51 @@
-<p>change-password works!</p>
+<title>Change Password Page - Drink and Delight</title>
+<body id="homepage">
+	<div class="container h-100">
+		<div class="d-flex justify-content-center h-100">
+			<div class="user_card">
+				<div class="d-flex justify-content-center">
+					<div class="brand_logo_container">
+					
+					</div>
+				</div>
+				<div class="d-flex justify-content-center form_container">
+					<form action="ChangePasswordServlet" method="post">
+						<div class="container" class="form-check" class="was-validated">
+                            <div class="input-group mb-3">
+                                <div class="input-group-append">
+                                    <b>{{questionVar}}</b>
+                                </div>
+                                
+                            </div>
+                            
+                            
+                            <div class="input-group mb-3">
+                                <div class="input-group-append">
+                                    
+                                </div>
+                                <input type="text" name="answer" class="form-control input_user" value="answer" [(ngModel)]="answerVar" placeholder="Answer security question" required>
+                            </div>
+                            
+                            <div class="input-group mb-3">
+                                <div class="input-group-append">
+                                    
+                                </div>
+                                <input type="password" name="newPassword" class="form-control input_user" value="newPassword" [(ngModel)]="newPasswordVar" placeholder="New Password" required>
+                            </div>
+                            
+                            <div class="input-group mb-3">
+                                <div class="input-group-append">
+                                    
+                                </div>
+                                <input type="password" name="confirmPassword" class="form-control input_user" value="confirmPassword" [(ngModel)]="confirmPasswordVar" placeholder="Confirm New Password" required>
+                            </div>
+                            <div class="d-flex justify-content-center mt-3 login_container">
+                                <button type="button" (click)="goToLoginPage()">Submit</button>
+                            </div>
+			            </div>
+		            </form>
+	            </div>
+            </div>
+        </div>
+    </div>
+</body>
