--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -38,7 +38,7 @@
 						Don't have an account? <a href="registrationPage.html" class="ml-2">Sign Up</a>
 					</div>
 					<div class="d-flex justify-content-center links">
-						<a href="ForgotPassword.html">Forgot your password?</a>
+						<a routerLink = "username-existence">Forgot your password?</a>
 					</div>
 
 				</div>
