--- a/src/app/authentication/username-existence/username-existence.component.html
+++ b/src/app/authentication/username-existence/username-existence.component.html
@@ -20,7 +20,7 @@
 						</div>
 						
 					</div>
-					<button type="submit" (click)="getMessage()">Submit</button>
+					<button type="submit" (click)="goToChangePasswordPage()">Submit</button>
 					</form> 
 				</div>
 				<div class="d-flex justify-content-center mt-3 login_container">
