--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,7 +17,7 @@
           <li class="nav-item">
                 <div class="btn-group">
                         <button class="btn btn-secondary btn-md btn-secondary-spacing font" id="navbardrop" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        HOME
+                            <a class="dropdown-item" routerLink ="home-page">HOME</a>
                         </button>
             <!-- <a class="nav-link"><p class="font">HOME</p></a> -->
             </div>
