changes made distributor,supplier

--- a/src/app/rawmaterials/display-rawmaterial-orders/display-rawmaterial-orders.component.html
+++ b/src/app/rawmaterials/display-rawmaterial-orders/display-rawmaterial-orders.component.html
@@ -55,8 +55,8 @@
 <br>
 
 
-                
-                <div  *ngIf ="!isDataFetched" class="alert alert-info">
+                <!-- <div *ngIf ="!isDataFetched"> -->
+                <div class="alert alert-info" *ngIf ="!isDataFetched">
                         &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <strong>{{ message }}</strong>
                       </div>
                     
