--- a/src/app/products/display-product-orders/display-product-orders.component.html
+++ b/src/app/products/display-product-orders/display-product-orders.component.html
@@ -31,8 +31,8 @@
 
                         <div *ngIf="!(showdate); then thenBlock else elseBlock"></div>
                         <ng-template #thenBlock>
-                                <div class="col-lg-4"> Enter start date: <br> <input [max]="todayFormat" type="date" name="date1" id="date1"  ><br><br> Enter end date : <br>
-                                        <input [max]="todayFormat" type="date" name="date2" id="date2"><br><br> </div>
+                                <div class="col-lg-4"> Enter start date: <br> <input [max]="todayFormat" type="date" name="date1" [(ngModel)]="date1Var" id="date1"  ><br><br> Enter end date : <br>
+                                        <input [max]="todayFormat" type="date" name="date2" [(ngModel)]="date2Var" id="date2"><br><br> </div>
 
                         </ng-template>
                         <ng-template #elseBlock>
@@ -48,16 +48,17 @@
 
                 </div>
         </div>
-        <div *ngIf="isDataFetched">
+        <div class="alert alert-info" *ngIf="!isDataFetched">
+               <strong> {{message}} </strong>
+        </div>
                         
-            <div class="table-responsive">
+            <div *ngIf="isDataFetched" class="table-responsive">
 
                             <table class="table table-striped table-bordered table-fixed table-hover table-condensed" style="border:0px; " id="myTable3">
                               <thead>
                                 <tr>
                             <th><div class="col-lg-0.5">OrderId</div></th>
                             <th><div class="col-lg-1">Name</div></th>
-                            <th><div class="col-lg-0.25">Product<br>Id</div></th>
                             <th><div class="col-lg-0.5">DistributorID</div></th>
                             <th><div class="col-lg-0.5">Quantity</div></th>
                             <th><div class="col-lg-0.5">QuantityUnit</div></th>
@@ -75,13 +76,12 @@
                                             <tbody>
                                               <tr>
                                     <td><div class="col-lg-1">{{po.orderId}}</div></td>
-                                    <td align="left"><div class="col-lg-0.5">{{po.name}}</div></td>
-                                    <td><div class="col-lg-1">{{po.pId}}</div></td>
-                                    <td><div class="col-lg-0.5">{{po.productId}}</div></td>
+                                    <td align="left"><div>{{po.name}}</div></td>
+                                    <td><div class="col-lg-0.5">{{po.distributorId}}</div></td>
                                     <td><div class="col-lg-1">{{po.quantityValue}}</div></td>
                                     <td align="left"><div class="col-lg-1">{{po.quantityUnit}}</div></td>
                                     <td align="left"><div class="col-lg-0.5">{{po.dateOfOrder | date :'yyyy-MM-dd' }}</div></td>
-                                    <td><div class="col-lg-0.5">{{po.dateOfDelivery | date :'yyyy-MM-dd'}}</div></td>
+                                    <td><div class="col-lg-0.5">{{po.dateOfdelivery | date :'yyyy-MM-dd'}}</div></td>
                                     <td><div class="col-lg-1">{{po.pricePerUnit}}</div></td>
                                     <td><div class="col-lg-1">{{po.totalPrice}}</div></td>
                                     <td><div class="col-lg-1">{{po.deliveryStatus}}</div></td>
@@ -98,4 +98,4 @@
     </div>
 
 </div>
-</div>
+
