--- a/src/app/rawmaterials/display-supplier-details/display-supplier-details.component.html
+++ b/src/app/rawmaterials/display-supplier-details/display-supplier-details.component.html
@@ -1,45 +1,77 @@
-<br>
-<h2>Display Supplier Details</h2>
-<form action="DisplaySupplierDetailsServlet" method="post"> 
-    <div class="container wrapper" class="form-check" class="was-validated">
+<div class="container wrapper" class="form-check" class="was-validated">
+    <hr>
+    <div class="row">
+        <div class="col-sm-4">
+            <label for="SupplierID">
+                <p>
+                    <b>Choose Supplier</b>
+                </p>
+            </label> <select class="form-control" name="SupplierID" [(ngModel)]="SupplierID" required>
 
- 
-
-        <hr>
-        <div class="row">
-            <div class="col-sm-4">
-                <label for="SupplierID">
-                    <p>
-                        <b>Choose Supplier</b>
-                    </p>
-                </label> <select class="form-control" name="SupplierID" required>
-<!--                <option value="ALL">ALL</option>-->
-                    <option value="SUP1">SUP1</option>
-                    <option value="SUP2">SUP2</option>
-                    <option value="SUP3">SUP3</option>
-                    <option value="SUP4">SUP4</option>
-                    <option value="SUP5">SUP5</option>
-                </select>
-            </div>
-            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-            
-
+                <option value="SUP1">SUP1</option>
+                <option value="SUP2">SUP2</option>
+                <option value="SUP3">SUP3</option>
+                <option value="SUP4">SUP4</option>
+                <option value="SUP5">SUP5</option>
+            </select>
         </div>
 
- 
-
-        <div class="container">
-            <br>
-            <br>
-            <br>
-            <br>
-            <div style="width: 500px;" align="left">
-
- 
-
-                <input type="submit" value="submit"><br>
-            </div>
-            <br>
-        </div>
     </div>
-    </form>
+    <div class="container">
+        <br>
+        <br>
+        <br>
+        <br>
+        <div style="width: 500px;" align="left">
+            <input type="submit" value="submit" (click)="getMessage()"><br>
+        </div>
+        <br>
+
+
+<!-- <div *ngIf ="!isDataFetched"> -->
+    <div class="alert alert-info" *ngIf ="!isDataFetched">
+        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <strong>{{ message }}</strong>
+      </div>
+    
+<div *ngIf="isDataFetched">
+        
+                <div class="table-responsive">
+
+                                <table class="table table-striped table-bordered table-fixed table-hover table-condensed" style="border:0px; " id="myTable3">
+                                  <thead>
+                                    <tr>
+                                <th><div class="col-lg-0.5">Supplier<br>Id</div></th>
+                                <th><div class="col-lg-1">Supplier<br>Name</div></th>
+                                <th><div class="col-lg-0.25">Address</div></th>
+                                <th><div class="col-lg-0.5">Email</div></th>
+                                <th><div class="col-lg-0.5">Phone<br>Number</div></th>
+                                                                
+                        </tr>
+                </thead>
+                </table>
+                <div  class="table-responsive" class ="table-responsive{-sm|-md|-lg|-xl}">
+                                <table class="table table-striped table-bordered table-fixed table-hover table-condensed" style="border:0px; " id="myTable3">
+                                                <tbody>
+                                                  <tr>
+                                        <td><div class="col-lg-1">{{dsups.supplierId}}</div></td>
+                                        <td><div class="col-lg-0.5">{{dsups.name}}</div></td>
+                                        <td><div class="col-lg-1">{{dsups.address}}</div></td>
+                                        <td><div class="col-lg-0.5">{{dsups.emailId}}</div></td>
+                                        <td><div class="col-lg-1">{{dsups.phoneNo}}</div></td>
+                                                                         
+                                </tr>
+
+                        </tbody>
+                </table>
+                </div>
+
+
+
+
+        </div>
+
+</div>
+
+
+    </div>
+</div>
