--- a/src/app/products/track-product-order/track-product-order.component.html
+++ b/src/app/products/track-product-order/track-product-order.component.html
@@ -30,11 +30,29 @@
    <p> Data fetched from servlet is: {{ message }}</p> 
 </div> -->
 
+<div *ngIf="isProcessing" class="spinner-container d-flex align-items-center justify-content-center flex-column">
+    <div class="spinner-border text-info" role="status">
+        
+    </div>
+    <h6 class="mt-2">Please wait ...</h6>
+</div>
+
 <br>
 <div class="container">
-<div class="alert alert-info" *ngIf = 'isTrackFetched'>
+<div class="alert" 
+[ngClass] = "{
+    'alert-info': !(message === 'Product Order ID does not exist'),
+    'alert-danger': (message === 'Product Order ID does not exist')
+  }"
+*ngIf = 'isTrackFetched'>
     <strong name = 'outputbox'>{{ message }}</strong>
   </div>
 </div>
+
+<div class="container">
+    <div class="alert alert-danger" *ngIf = 'hasErrorOccured'>
+        <strong name = 'errorbox'>{{ errorMessage }}</strong>
+      </div>
+    </div>
 
 
