--- a/src/app/rawmaterials/track-rawmaterial-order/track-rawmaterial-order.component.html
+++ b/src/app/rawmaterials/track-rawmaterial-order/track-rawmaterial-order.component.html
@@ -30,14 +30,27 @@
     </form>
 </div>
 
-<!-- <div *ngIf = 'isTrackFetched'>
-    <p> Data fetched from servlet is: {{ message }}</p> 
- </div> -->
+<div *ngIf="isProcessing" class="spinner-container d-flex align-items-center justify-content-center flex-column">
+    <div class="spinner-border text-info" role="status">
+        
+    </div>
+    <h6 class="mt-2">Please wait ...</h6>
+</div>
 
- <br>
- <div class="container" id = 'outputbox'>
- <div class="alert alert-info" *ngIf = 'isTrackFetched'>
-     <strong name = 'outputbox'>{{ message }}</strong>
-     <!-- <p name = 'outputbox'>The order ID had been in the warehouse with warehouseID = w01 from 2019-08-14 to 2019-10-30(77 days)</p> -->
-   </div>
- </div>
+<br>
+<div class="container">
+<div class="alert" 
+[ngClass] = "{
+    'alert-info': !(message === 'RawMaterial Order ID does not exist'),
+    'alert-danger': (message === 'RawMaterial Order ID does not exist')
+  }"
+*ngIf = 'isTrackFetched'>
+    <strong name = 'outputbox'>{{ message }}</strong>
+  </div>
+</div>
+
+<div class="container">
+    <div class="alert alert-danger" *ngIf = 'hasErrorOccured'>
+        <strong name = 'errorbox'>{{ errorMessage }}</strong>
+      </div>
+    </div>
