header ngif done

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
     <div class="footer-copyright text-center bg-dark font fixed-bottom">© 2019 Copyright:
-        <a href="#">Drink and Delight</a>
+        <a routerLink ="home-page">Drink and Delight</a>
     </div>
 </footer>
