--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm navbar-toggleable-md bg-dark navbar-dark">
     <!-- Brand/logo -->
-    <a class="navbar-brand header-left" href="#">
+    <a class="navbar-brand header-left" routerLink ="home-page">
           
         <img src="../../assets/logo.png" class="img-circle image" alt="logo">
     </a>
@@ -12,12 +12,12 @@
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <div  *ngIf="loggedIn" class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="nav navbar-nav mr-auto">
           <li class="nav-item">
                 <div class="btn-group">
-                        <button class="btn btn-secondary btn-md btn-secondary-spacing font" id="navbardrop" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <a class="dropdown-item" routerLink ="home-page">HOME</a>
+                        <button class="btn btn-secondary btn-md btn-secondary-spacing font" id="navbardrop" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" routerLink ="home-page">
+                            HOME
                         </button>
             <!-- <a class="nav-link"><p class="font">HOME</p></a> -->
             </div>
@@ -25,7 +25,7 @@
 
           <li class="nav-item dropdown">
                 <div class="btn-group">
-                        <button class="btn btn-secondary btn-md dropdown-toggle btn-secondary-spacing font" id="navbardrop" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <button class="btn btn-secondary btn-md dropdown-toggle btn-secondary-spacing font" id="navbardrop" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  routerLink ="home-page">
                           RAW MATERIAL
                         </button>
             <!-- <a class="nav-link dropdown-toggle font" href="#" id="navbardrop" data-toggle="dropdown">Raw Material
@@ -44,7 +44,7 @@
 
           <li class="nav-item dropdown">
                 <div class="btn-group">
-                        <button class="btn btn-secondary btn-md dropdown-toggle btn-secondary-spacing font" id="navbardrop" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <button class="btn btn-secondary btn-md dropdown-toggle btn-secondary-spacing font" id="navbardrop" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" routerLink ="home-page">
                         PRODUCT
                         </button>
             <!-- <a class="nav-link dropdown-toggle font" href="#" id="navbardrop" data-toggle="dropdown">PRODUCT</a> -->
@@ -63,7 +63,7 @@
 
           <li class="nav-item">
                 <div class="btn-group">
-                        <button class="btn btn-secondary btn-md font" id="navbardrop" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <button class="btn btn-secondary btn-md font" id="navbardrop" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" (click) = "logOut()">
                         LOGOUT
                         </button>
             <!-- <a class="nav-link font" href="#">LOGOUT</a> -->
