Add toast and styling to Authentication

--- a/src/app/authentication/change-password/change-password.component.html
+++ b/src/app/authentication/change-password/change-password.component.html
@@ -8,9 +8,12 @@
 					
 					</div>
 				</div>
-				<div class="d-flex justify-content-center form_container">
+				<div class="d-flex justify-content-center form_container p-5 border border-info rounded-lg" style="margin-top:10%;margin-bottom: 50px;">
 					<form action="ChangePasswordServlet" method="post">
 						<div class="container" class="form-check" class="was-validated">
+                                <div class="d-flex justify-content-left">
+                                        <label>Security Question :</label>
+                                    </div>
                             <div class="input-group mb-3">
                                 <div class="input-group-append">
                                     <b>{{questionVar}}</b>
@@ -18,7 +21,9 @@
                                 
                             </div>
                             
-                            
+                            <div class="d-flex justify-content-left">
+                                    <label>Enter Security Answer :</label>
+                                </div>
                             <div class="input-group mb-3">
                                 <div class="input-group-append">
                                     
@@ -26,6 +31,10 @@
                                 <input type="text" name="answer" class="form-control input_user" value="answer" [(ngModel)]="answerVar" placeholder="Answer security question" required>
                             </div>
                             
+
+                            <div class="d-flex justify-content-left">
+                                    <label>Enter New Password :</label>
+                                </div>
                             <div class="input-group mb-3">
                                 <div class="input-group-append">
                                     
@@ -33,14 +42,17 @@
                                 <input type="password" name="newPassword" class="form-control input_user" value="newPassword" [(ngModel)]="newPasswordVar" placeholder="New Password" required>
                             </div>
                             
+                            <div class="d-flex justify-content-left">
+                                    <label>Confirm Password :</label>
+                                </div>
                             <div class="input-group mb-3">
                                 <div class="input-group-append">
                                     
                                 </div>
                                 <input type="password" name="confirmPassword" class="form-control input_user" value="confirmPassword" [(ngModel)]="confirmPasswordVar" placeholder="Confirm New Password" required>
                             </div>
-                            <div class="d-flex justify-content-center mt-3 login_container">
-                                <button type="button" (click)="goToLoginPage()">Submit</button>
+                            <div class="d-flex justify-content-left mt-3 login_container">
+                                <button type="button" class="btn btn-primary" (click)="goToLoginPage()">Submit</button>
                             </div>
 			            </div>
 		            </form>
