--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -11,29 +11,36 @@
 				</div>
 				<br><br><br><br>
 				<div class="d-flex justify-content-center form_container">
-					<form action="LoginServlet" method="post"> 
+					<form action="LoginServlet" method="post" class="p-5 border border-info rounded-lg"> 
 					<div class="container" class="form-check" class="was-validated">
+						<div class="d-flex justify-content-left">
+							<label>Enter Username :</label>
+						</div>
 						<div class="input-group mb-3">
 							<div class="input-group-append">
-							</div>
-							<input type="text" name="username" placeholder="username" [(ngModel)]="usernameVar" id="username" required />
+							</div>							
+							<input type="text" name="username" class="form-control input_user" placeholder="username" [(ngModel)]="usernameVar" id="username" required />
 						</div>
 						
+						<div class="d-flex justify-content-left">
+							<label>Enter Password :</label>
+						</div>
 						<div class="input-group mb-2">
 							<div class="input-group-append">
-
-							</div>
-							<input type="password" name="password" placeholder="password" [(ngModel)]="passwordVar" id="password" required />
+							</div>							
+							<input type="password" name="password" class="form-control input_user" placeholder="password" [(ngModel)]="passwordVar" id="password" required />
 						</div>
 					</div>
-					<button type="submit" (click)="getMessage()">Login</button>
+					
+						<button type="submit" class="btn btn-primary" (click)="getMessage()">Login</button>
+					
 					</form> 
 				</div>
 				<div class="d-flex justify-content-center mt-3 login_container">
 
 
 				</div>
-				<div class="mt-4">
+				<div class="mt-4" style="margin-bottom: 50px">
 					<div class="d-flex justify-content-center links">
 						Don't have an account? <a href="registrationPage.html" class="ml-2">Sign Up</a>
 					</div>
