--- a/src/app/authentication/username-existence/username-existence.component.html
+++ b/src/app/authentication/username-existence/username-existence.component.html
@@ -10,17 +10,20 @@
 					</div>
 				</div>
 				<div class="d-flex justify-content-center form_container">
-					<form action="LoginServlet" method="post"> 
+					<form action="LoginServlet" method="post" style="margin-top:10%;" class="p-5 border border-info rounded-lg"> 
 					<div class="container" class="form-check" class="was-validated">
+							<div class="d-flex justify-content-left">
+								<label>Enter Username :</label>
+							</div>
 						<div class="input-group mb-3">
 							<div class="input-group-append">
 
 							</div>
-							<input type="text" name="username" placeholder="username" [(ngModel)]="usernameVar" id="username" required />
-						</div>
+								<input type="text" name="username" class="form-control input_user" placeholder="username" [(ngModel)]="usernameVar" id="username" required />
+							</div>
 						
 					</div>
-					<button type="submit" (click)="goToChangePasswordPage()">Submit</button>
+					<button type="submit" class="btn btn-primary"  (click)="goToChangePasswordPage()">Submit</button>
 					</form> 
 				</div>
 				<div class="d-flex justify-content-center mt-3 login_container">
