routerLink removed from navbar

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -25,7 +25,7 @@
 
           <li class="nav-item dropdown">
                 <div class="btn-group">
-                        <button class="btn btn-secondary btn-md dropdown-toggle btn-secondary-spacing font" id="navbardrop" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  routerLink ="home-page">
+                        <button class="btn btn-secondary btn-md dropdown-toggle btn-secondary-spacing font" id="navbardrop" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           RAW MATERIAL
                         </button>
             <!-- <a class="nav-link dropdown-toggle font" href="#" id="navbardrop" data-toggle="dropdown">Raw Material
@@ -44,7 +44,7 @@
 
           <li class="nav-item dropdown">
                 <div class="btn-group">
-                        <button class="btn btn-secondary btn-md dropdown-toggle btn-secondary-spacing font" id="navbardrop" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" routerLink ="home-page">
+                        <button class="btn btn-secondary btn-md dropdown-toggle btn-secondary-spacing font" id="navbardrop" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         PRODUCT
                         </button>
             <!-- <a class="nav-link dropdown-toggle font" href="#" id="navbardrop" data-toggle="dropdown">PRODUCT</a> -->
