loggedIn done for all components

--- a/src/app/products/display-product-orders/display-product-orders.component.html
+++ b/src/app/products/display-product-orders/display-product-orders.component.html
@@ -43,7 +43,7 @@
                 <div class="container"><br><br><br><br>
                         <div style="width:500px;" align="right">
 
-                                <input  type="submit" value="submit" (click)= "getProduct()"><br>
+                                <input  type="submit" class="btn btn-dark" value="submit" (click)= "getProduct()"><br>
                                 
 
                 </div>
