--- a/src/app/products/update-product-order/update-product-order.component.html
+++ b/src/app/products/update-product-order/update-product-order.component.html
@@ -25,7 +25,7 @@
             </div>
         </div>
 <br>
-    <button type="submit"class="btn btn-primary" (click) = 'getMessage()'>Update Order</button>
+    <button type="submit"class="btn btn-dark" (click) = 'getMessage()'>Update Order</button>
 </div>
 <br>
     <div class="container">
